--- a/app/index.html
+++ b/app/index.html
@@ -136,8 +136,8 @@
 	<section class="s-features">
 		<div class="container flex-col jc-center">
 			<div class="section-text ta-center">
-				<div class="section-text__subtitle section-text__subtitle--light">Our</div>
-				<h2 class="section-text__title section-text__title--light">Tariffs</h2>
+				<div class="section-text__subtitle section-text__subtitle--light">We Do Best</div>
+				<h2 class="section-text__title section-text__title--light">Than You Wish</h2>
 			</div>
 			<div class="features flex-row jc-between jc-center-lg gap-full">
 				<div class="feature flex-row">
@@ -187,6 +187,124 @@
 			</div>
 		</div>
 	</section>
+	<section class="s-download">
+		<div class="container flex-col jc-center">
+			<div class="section-text ta-center">
+				<div class="section-text__subtitle section-text__subtitle--light">Download</div>
+				<h2 class="section-text__title section-text__subtitle--dark">Best Cab service</h2>
+			</div>
+			<div class="service flex-row jc-between jc-center-md">
+				<div class="download service__download">
+					<div class="download__text ta-center-md">
+						<div class="download__title">Downlaod the Cab voucher app free! Get Exciting New Offers</div>
+						<div class="download__description">
+							Quisque sollicitudin feugiat risus, eu posuere ex euismod eu. Phasellus hendrerit, massa efficitur.
+						</div>
+					</div>
+					<div class="download__images flex-row jc-between jc-center-sm gap no-gap-sm">
+						<img class="download__img" src="img/google-play-logo.png" alt="google-play-logo">
+						<img class="download__img" src="img/apple-logo.png" alt="apple-logo">
+					</div>
+				</div>
+				<div class="service__sample"><img src="img/phone.jpg" alt="phone"></div>
+			</div>
+		</div>
+	</section>
+	<section class="s-reviews">
+		<div class="container flex-col jc-center">
+			<div class="section-text ta-center">
+				<div class="section-text__subtitle section-text__subtitle--light">Happy Client's</div>
+				<h2 class="section-text__title section-text__title--light">Testimonials</h2>
+			</div>
+		</div>
+	</section>
+	<section class="s-call">
+		<div class="container flex-col jc-center">
+			<div class="call ta-center">
+				<div class="call__slogan">
+					We are Ready to Take Your Call 24 Hours, 7 Days!
+				</div>
+				<div class="call__telephone">
+					+123 4567 8900
+				</div>
+			</div>
+
+		</div>
+	</section>
+	<footer class="footer">
+		<div class="container flex-row jc-between jc-center-md gap-full">
+			<div class="footer-block footer__block jc-center-md">
+				<div class="footer-block__title ta-center-md">About cab Hub</div>
+				<div class="footer-block__divider"></div>
+				<div class="footer-block__description ta-center-md">Quisque sollicitudin feugiat risus, eu posuere ex euismod eu. Phasellus hendrerit, massa efficitur.Quisque sollicitudin feugiat risus, eu posuere ex euismod eu.</div>
+				<div class="footer-block__socials flex-row jc-center-md ai-center">
+					<a href="" class="footer-block__social">
+						<svg width="11" height="20" fill="#ffc61a">
+							<use xlink:href="img/sprite.svg#facebook-f-brands"></use>
+						</svg>
+					</a>
+					<a href="" class="footer-block__social">
+						<svg width="25" height="18" fill="#ffc61a">
+							<use xlink:href="img/sprite.svg#google-plus-g-brands"></use>
+						</svg>
+					</a>
+					<a href="" class="footer-block__social">
+						<svg width="18" height="15" fill="#ffc61a">
+							<use xlink:href="img/sprite.svg#twitter-brands"></use>
+						</svg>
+					</a>
+					<a href="" class="footer-block__social">
+						<svg width="17" height="18" fill="#ffc61a">
+							<use xlink:href="img/sprite.svg#instagram-brands"></use>
+						</svg>
+					</a>
+				</div>
+			</div>
+			<div class="footer-block footer__block flex-col ai-start">
+				<div class="footer-block__title ta-center-md">Download</div>
+				<div class="footer-block__divider"></div>
+				<div class="footer-block__description ta-center-md">Quisque sollicitudin feugiat risus, eu posuere ex euismod eu. Phasellus hendrerit, massa efficitur.</div>
+				<div class="footer-block__downloads flex-col">
+					<div class="footer-block__download flex-row jc-between ai-center">
+						<a href="" class="footer-block__download-link">Android Users</a>
+						<svg width="24" height="28" fill="#fff">
+							<use xlink:href="img/sprite.svg#android-brands"></use>
+						</svg>
+					</div>
+					<div class="footer-block__download flex-row jc-between ai-center">
+						<a href="" class="footer-block__download-link">
+						IOS Users	
+						</a>
+						<svg width="23" height="28" fill="#fff">
+							<use xlink:href="img/sprite.svg#apple-brands"></use>
+						</svg>
+					</div>
+				</div>
+			</div>
+			<div class="footer-block footer__block">
+				<div class="footer-block__title ta-center-md">Contact</div>
+				<div class="footer-block__divider"></div>
+				<div class="contacts">
+					<div class="contacts__item flex-row ai-center">
+						<div class="contacts__img flex-fow centered">
+							<svg width="15" height="21" fill="#fff">
+								<use xlink:href="img/sprite.svg#map-marker-alt-solid"></use>
+							</svg>
+						</div>
+						<div class="contacts__text">+123, Main Street, Your City </div>
+					</div>
+					<div class="contacts__item flex-row ai-center">
+						<div class="contacts__img flex-fow centered">
+							<svg width="23" height="28" fill="#fff">
+								<use xlink:href="img/sprite.svg#mobile-alt-solid"></use>
+							</svg>
+						</div>
+						<div class="contacts__text">+123 4567 8900</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
