--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 	<header class="header" id="home">
 		<nav class="menu header__menu flex-row jc-center">
 			<div class="container flex-row jc-between">
-				<a href="" class="logo menu__logo">
+				<a href="#home" class="logo menu__logo">
 					<h1 class="logo__top">
 						Cab<span>Hub</span>
 					</h1>
@@ -22,8 +22,8 @@
 					</div>
 				</a>
 				<ul class="menu__list flex-row ai-center">
-					<li class="menu__item">
-						<a class="menu__link" href="#home">Home</a>
+					<li class="menu__item active">
+						<a class="menu__link active" href="#home">Home</a>
 					</li>
 					<li class="menu__item">
 						<a class="menu__link" href="#about">About</a>
@@ -54,7 +54,7 @@
 				<h2 class="banner__title">Book Cab Now</h2>
 				<div class="banner__telephone">+123 4567 8900</div>
 				<div class="banner__domain ta-center-sm">www.bookcabnow.com</div>
-				<img class="banner__img" src="img/main-car.png" alt="taxi">
+				<div class="banner__img"><img src="img/main-car.png" alt="taxi"></div>
 			</div>
 		</div>
 	</header>
